java11 대응 코드 수정